--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurarVideoTime.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurarVideoTime.xhtml
@@ -4,32 +4,96 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/template.xhtml"
-                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">    
+    <ui:define name="head">
+        <script type="text/javascript">
+            function configurarMultimedia() {
+                if ($(".media").size() !== 0) {
+                    media = Popcorn(".media");
+                }
+            }
+        </script>
+    </ui:define>
     <ui:define name="breadCrumb">
-        <p:breadCrumb>
+        <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Clase" url="#"/>
             <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}"/>
-            <p:separator />
+            <p:menuitem value="Configuración de Interaccion Entre Componentes" url="#"/>
         </p:breadCrumb>
+        <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
     </ui:define>
     <ui:define name="content">
-        <h:form>
-            <div class="EmptyBox5"></div>
-            <script type="text/javascript">
-                #{gestionClaseInteracController.funcionJS}
-            </script>
-            <p:remoteCommand name="refrescarClase" update="clase"></p:remoteCommand>
-            <p:tabView id="clase" activeIndex="#{gestionClaseInteracController.idElemenActive}" style="height: #{gestionClaseInteracController.claseConfig.clAlto+90}px;width: #{gestionClaseInteracController.claseConfig.clAncho+156}px"> 
+        <div class="EmptyBox5"></div>
+        <p:panel>
+            <h:form id="consultaForm">
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>                
+                <div class="EmptyBox5"></div>
+                <p:panelGrid columns="4" id="panel">
+                    <p:outputLabel value="Componente 1"></p:outputLabel>
+                    <p:selectOneMenu value="#{gestionClaseInteracController.nuevaInterac.ieSupC1}" converter="superCompon" filter="true" filterMatchMode="contains" valueChangeListener="#{gestionClaseInteracController.getEventosC1}">
+                        <f:selectItems value="#{gestionClaseInteracController.compDisponibles}" var="comps1" itemLabel="#{comps1.scNombre}" itemValue="#{comps1}"></f:selectItems>
+                        <p:ajax event="valueChange" update="e1"/>
+                    </p:selectOneMenu>
+                    <p:outputLabel for="e1" value="Evento 1"></p:outputLabel>
+                    <p:selectOneMenu id="e1" value="#{gestionClaseInteracController.nuevaInterac.ieEventoC1}" converter="evento" filter="true" filterMatchMode="contains">
+                        <f:selectItems value="#{gestionClaseInteracController.evn1}" var="evn1" itemLabel="#{evn1.evDescripcion}" itemValue="#{evn1}"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:outputLabel value="Componente 2"></p:outputLabel>
+                    <p:selectOneMenu value="#{gestionClaseInteracController.nuevaInterac.ieSupC2}" converter="superCompon" filter="true" filterMatchMode="contains" valueChangeListener="#{gestionClaseInteracController.getEventosC2}">
+                        <f:selectItems value="#{gestionClaseInteracController.compDisponibles}" var="comps2" itemLabel="#{comps2.scNombre}" itemValue="#{comps2}"></f:selectItems>
+                        <p:ajax event="valueChange" update="e2"/>
+                    </p:selectOneMenu>
+                    <p:outputLabel for="e2" value="Evento 2"></p:outputLabel>
+                    <p:selectOneMenu id="e2" value="#{gestionClaseInteracController.nuevaInterac.ieEventoC2}" converter="evento" filter="true" filterMatchMode="contains">
+                        <f:selectItems value="#{gestionClaseInteracController.evn2}" var="evn2" itemLabel="#{evn2.evDescripcion}" itemValue="#{evn2}"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:spinner value="#{gestionClaseInteracController.nuevaInterac.ieRetraso}" max="10000" min="0"></p:spinner>
+                    <p:commandButton value="Agregar Interaccion" action="#{gestionClaseInteracController.agregarInteraccion()}" update="clase,panel"></p:commandButton>
+                </p:panelGrid>
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Si" action="#{gestionClaseInteracController.eliminarPantallaActual()}" update="clase" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" immediate="true" ></p:commandButton>
+                </p:dialog>
+                <p:dataTable id="acciones" value="#{gestionClaseInteracController.interacPantallaElemPlantillaActual}" var="interacc">
+                    <p:column headerText="Componente 1">
+                        #{interacc.ieSupC1.scNombre}
+                    </p:column>
+                    <p:column headerText="Evento 1">
+                        #{interacc.ieEventoC1.evDescripcion}
+                    </p:column>
+                    <p:column headerText="Componente 2">
+                        #{interacc.ieSupC2.scNombre}
+                    </p:column>
+                    <p:column headerText="Evento 2">
+                        #{interacc.ieEventoC2.evDescripcion}
+                    </p:column>
+                    <p:column headerText="Retraso">
+                        #{interacc.ieRetraso}
+                    </p:column>
+                    <p:column headerText="Acciones">
+                        <p:commandLink action="#{gestionClaseInteracController.setInteraccionEliminada(interacc)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
+                        </p:commandLink>
+                    </p:column>
+                </p:dataTable>
+                <div class="EmptyBox5"></div>
+                <script type="text/javascript">
+                    #{gestionClaseInteracController.funcionJS}
+                </script>
                 <c:forEach items="#{gestionClaseInteracController.secciones}" var="elemPlantilla">
-                    <p:tab title="#{elemPlantilla.nombre}">
-                        <p:tabView orientation="left" activeIndex="#{elemPlantilla.pantallaActual}">
+                    <p:dialog visible="true" header="#{elemPlantilla.nombre}" style="height: #{gestionClaseInteracController.claseConfig.clAlto+90}px;width: #{gestionClaseInteracController.claseConfig.clAncho+156}px" widgetVar="compon#{pantalla.numPantalla}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{superComponente.superComp.idSuperCompon}">
+                        <p:tabView orientation="left" activeIndex="#{elemPlantilla.pantallaActual}" > 
                             <c:forEach items="#{elemPlantilla.pantallas}" var="pantalla">
                                 <p:tab title="Pág #{pantalla.numPantalla}">
                                     <p:panel id="pantalla_id_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" style="height: #{gestionClaseInteracController.claseConfig.clAlto}px;width: #{gestionClaseInteracController.claseConfig.clAncho}px">
-                                        <c:forEach items="#{pantalla.componentes}" var="superComponente">                                                
-                                            <p:panel class="multimedia compon#{pantalla.numPantalla}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{superComponente.superComp.idSuperCompon}" id="elem_id_#{superComponente.claseSuperComp.idClaseSupComp}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" style="left: #{superComponente.claseSuperComp.scPosX}px;top: #{superComponente.claseSuperComp.scPosY}px;height: #{superComponente.superComp.scAlto+10}px;width: #{superComponente.superComp.scAncho+10}px;position: absolute;">
+                                        <c:forEach items="#{pantalla.componentes}" var="superComponente">
+                                            <p:panel class="multimedia  compon#{pantalla.numPantalla}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{superComponente.superComp.idSuperCompon}" id="elem_id_#{superComponente.claseSuperComp.idClaseSupComp}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" style="left: #{superComponente.claseSuperComp.scPosX}px;top: #{superComponente.claseSuperComp.scPosY}px;height: #{superComponente.superComp.scAlto+10}px;width: #{superComponente.superComp.scAncho+10}px;position: absolute;">
                                                 <c:choose>
                                                     <c:when test="#{superComponente.superComp.idTipoSuperCompon.idTipoSuperCompon==1}">
                                                         <c:if test="#{superComponente.data.size()>0}">
@@ -106,9 +170,26 @@
                                 </p:tab>
                             </c:forEach>
                         </p:tabView>
-                    </p:tab>
+                    </p:dialog>
                 </c:forEach>
-            </p:tabView>
-        </h:form>
+                <div class="EmptyBox50"></div>
+                <div class="Container100 Responsive">
+                    <p:commandButton value="Guardar Configuracion de interacciones" actionListener="#{gestionClaseInteracController.guardarConfiguracionInteracciones()}" ajax="true"></p:commandButton>
+                    <p:commandButton value="Refrescar" actionListener="#{gestionClaseInteracController.refreshConfig()}" ajax="true" oncomplete="refrescarClase()"></p:commandButton>
+                    <p:commandButton value="Cancelar" immediate="true">
+                        <p:ajax resetValues="true" listener="#{gestionClaseInteracController.setIndexMenu(0)}"/>
+                    </p:commandButton>
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Alumnos">    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Cursos">    
+                        </p:menuitem>
+                    </p:tieredMenu> 
+                </div>
+            </h:form>
+        </p:panel>
     </ui:define>
 </ui:composition>
