--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
@@ -1,93 +1,77 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <!--paginas usadas-->
-    <!--http://iswwwup.com/t/ae68d91b9ec0/mongodb-how-to-get-popcorn-js-working-on-dynamically-loaded-content.html-->
-    <!--http://nosmoke.cycle-it.com/2013/07/18/popcorn/-->
-    <h:head>
-        <title>Facelet Title</title>
-        <script src="../../../../resources/js/popcorn-complete.min.js"></script>
-        <!--<script src="http://code.jquery.com/jquery-latest.min.js"></script>-->
-    </h:head>
-    <h:body>
-        <h:form>
-            <script>
-//                // ensure the web page (DOM) has loaded
-                var video;
-                document.addEventListener("DOMContentLoaded", function () {
-                    // Create a popcorn instance by calling Popcorn("#id-of-my-video")
-                    video = Popcorn("#ourvideo");
-
-//                    $(".aja html body video").c
-                    // add a footnote at 2 seconds, and remove it at 6 seconds
-                    video.footnote({
-                        start: 2,
-                        end: 6,
-                        text: "Comienza una nueva!",
-                        target: "footnotediv"
-                    });
-                    video.on('play', function () {
-
-                    });
-                    // play the video right away
-                    video.preload("auto");
-                    video.exec(5, function () {
-                        video.pause();
-                        PF('dialog').show();
-                    });
-                    video.exec(8, function () {
-                        video.pause();
-                        PF('dialog').show();
-                    });
-                }, false);
-            </script>            
-            <video height="180" width="300" id="ourvideo" controls="true">
-                <source src="/SIENI-web/faces/javax.faces.resource/dynamiccontent.properties?ln=primefaces&amp;pfdrid=5E5CHMFh8dKA5GMu2kfdaA%3D%3D&amp;pfdrt=sc&amp;pfdrid_c=true&amp;time=#{dateUtils.time}"></source>
-            </video>
-            <p:commandButton onclick="video.play()" value="c"></p:commandButton>
-            <p:commandButton onclick="video.pause()" value="p"></p:commandButton>
-            <p:commandButton onclick="PF('dialog').show();" value="mostrar" ajax="true"></p:commandButton>
-            <div id="footnotediv"></div>
-            <p:remoteCommand name="actualizarVideo" action="video.pause();PF('dialog').show();">
-            </p:remoteCommand>
-            <p:dialog appendTo="@(body)" widgetVar="dialog" modal="true">
-                <p:outputLabel value="Mensaje"></p:outputLabel>
-                <p:commandButton onclick="video.play();
-                        PF('dialog').hide();" value="continuar"></p:commandButton>
-            </p:dialog>
-            
-            <p:dialog id="compon">
-                <c:choose>
-                    <c:when test="#{gestionComponentesInteractivosController.nuevo.idTipoSuperCompon=='1'}"><!-- galeria de imagenes-->
-                        <p:galleria value="#{gestionComponentesInteractivosController.listaArchivos}" var="imgs">
-                            <p:graphicImage value="#{gestionComponentesInteractivosController.getFile(imgs.arArchivo)}" title="#{imgs.arNombre}" >
-                            </p:graphicImage>
-                        </p:galleria>
-                    </c:when>
-                    <c:when test="#{gestionComponentesInteractivosController.nuevo.idTipoSuperCompon=='2'}"><!-- imagen-->
-                        <c:forEach items="#{gestionComponentesInteractivosController.listaArchivos}" var="img">
-                            <p:graphicImage value="#{gestionComponentesInteractivosController.getFile(img.arArchivo)}" title="#{imgs.arNombre}" >
-                            </p:graphicImage>
-                        </c:forEach>
-                    </c:when>
-                    <c:when test="#{gestionComponentesInteractivosController.nuevo.idTipoSuperCompon=='3'}"><!-- Audio-->
-                        <c:forEach items="#{gestionComponentesInteractivosController.listaArchivos}" var="audio">
-                            <p:media value="#{gestionComponentesInteractivosController.getFile(audio.arArchivo)}" player="quicktime" >    
-                            </p:media>
-                        </c:forEach>
-                    </c:when>
-                    <c:when test="#{gestionComponentesInteractivosController.nuevo.idTipoSuperCompon=='4'}"><!-- Audio-->
-                        <c:forEach items="#{gestionComponentesInteractivosController.listaArchivos}" var="video">
-                            <p:media value="#{gestionComponentesInteractivosController.getFile(video.arArchivo)}" player="quicktime" >    
-                            </p:media>
-                        </c:forEach>
-                    </c:when>
-                </c:choose>
-            </p:dialog>
-        </h:form>
-    </h:body>
-</html>
-
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/WEB-INF/template.xhtml">
+    <ui:define name="breadCrumb">
+        <p:breadCrumb class="Container90">
+            <p:menuitem value="Home" url="/"/>
+            <p:menuitem value="Gestionar Curso" url="#"/>
+            <p:menuitem value="Gestionar Clase" url="#"/>
+            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseInteractiva}"/>
+            <p:menuitem value="Busqueda de Video-Clase" url="#{siteUrls.claseInteractiva}"/>
+        </p:breadCrumb>
+        <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
+    </ui:define>
+    <ui:define name="content">
+        <div class="EmptyBox5"></div>
+        <p:panel>
+            <h:form id="consultaForm">
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Si" action="#{gestionVideoClaseController.eliminarClase()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
+                </p:dialog>
+                <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{gestionVideoClaseController.claseList}" 
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,40"
+                             reflow="true">
+                    <p:column headerText="Materia"  filterBy="#{car.idCurso.idMateria.maNombre}" filterMatchMode="contains" filterable="true">
+                        #{car.idCurso.idMateria.maNombre}
+                    </p:column>
+                    <p:column headerText="Curso"  filterBy="#{car.idCurso.crNombre}" filterMatchMode="contains" filterable="true">
+                        #{car.idCurso.crNombre}
+                    </p:column>
+                    <p:column headerText="Tema de clase"  filterBy="#{car.clTema}" filterMatchMode="contains" filterable="true">
+                        #{car.clTema}
+                    </p:column>
+                    <p:column headerText="Docente"  filterBy="#{car.idCurso.idDocente.nombreCompleto}" filterMatchMode="contains" filterable="true">
+                        #{car.idCurso.idDocente.nombreCompleto}
+                    </p:column>
+                    <p:column headerText="Plantilla"  filterBy="#{car.idPlantilla.plNombre}" filterMatchMode="contains" filterable="true">
+                        #{car.nombrePlantilla}
+                    </p:column>
+                    <p:column headerText="Estado"  filterBy="#{car.estado}" filterMatchMode="contains" filterable="true">
+                        #{car.estado}
+                    </p:column>
+                    <p:column headerText="Acciones">
+                        <p:commandLink action="#{gestionVideoClaseController.mostrar(car)}" >
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Vista previa de Clase"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionVideoClaseController.modificar(car)}">
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar detalles Clase"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionVideoClaseController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionVideoClaseController.configurar(car)}"  >
+                            <i class="icon-settings Fs25 Red MarRight10" style="cursor: pointer" title="Configurar componentes de la clase"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionVideoClaseController.configurarInterac(car)}"  >
+                            <i class="icon-magic20 Fs25 Red MarRight10" style="cursor: pointer" title="Configurar Interacciones entre componentes"></i>
+                        </p:commandLink>
+                    </p:column>
+                </p:dataTable>
+                <div class="EmptyBox20"></div>
+                <p:commandButton value="Configurar Clase interactiva" action="#{gestionVideoClaseController.setIndexMenu(3)}"></p:commandButton>
+                <p:commandButton value="Refrescar" action="#{gestionVideoClaseController.refresh()}" update="consulta"></p:commandButton>
+            </h:form>
+        </p:panel>
+    </ui:define>
+</ui:composition>
